--- a/cat.jpg/index.html
+++ b/cat.jpg/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <meta property="og:image" content="https://cdn.discordapp.com/attachments/548257000132444175/971169959914930226/moist-critical-penguinz0.gif">
+        <meta property="og:image" content="https://media.discordapp.net/attachments/922959758082859068/984582079620722788/Dr_bob-1.gif?width=390&height=390">
         <meta property="og:type" content="video.other">
-        <meta property="og:video:url" content="https://cdn.discordapp.com/attachments/548257000132444175/971168823812161546/My_kids_got_a_respiratory_virus_peni_musc.mp4">
-        <meta property="og:video:height" content="202">
-        <meta property="og:video:width" content="250">
+        <meta property="og:video:url" content="https://cdn.discordapp.com/attachments/922959758082859068/984572617656786944/Dr_bob-1.mp4">
+        <meta property="og:video:height" content="480">
+        <meta property="og:video:width" content="480">
     </head>
     <body>
         <img src="https://simonbeans.rf.gd/main.html">
