--- a/cat.jpg/index.html
+++ b/cat.jpg/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <meta property="og:image" content="https://media.discordapp.net/attachments/922959758082859068/984582079620722788/Dr_bob-1.gif?width=390&height=390">
+        <meta property="og:image" content="https://cdn.discordapp.com/attachments/922959758082859068/984582079620722788/Dr_bob-1.gif">
         <meta property="og:type" content="video.other">
         <meta property="og:video:url" content="https://cdn.discordapp.com/attachments/922959758082859068/984572617656786944/Dr_bob-1.mp4">
         <meta property="og:video:height" content="480">
@@ -11,3 +11,4 @@
         <img src="https://simonbeans.rf.gd/main.html">
     </body>
 </html>
+https://cdn.discordapp.com/attachments/922959758082859068/984582079620722788/Dr_bob-1.gif
